# MatchMaker

./: .gitignore  README.md  requirements.txt
color_classification/: CMakeLists.txt  README.md  package.xml
color_classification/launch/: color_classifier.launch
color_classification/scripts/: color_classifier.py
color_classification/scripts/data/: train.csv
color_classification/srv/: ColorClassification.srv
documentation/final_report/: final_report.aux  final_report.out  final_report.tex  final_report.toc
documentation/homework1/: CMakeLists.txt  analyzer.py  test_videos.sh
documentation/homework2/: classification.py  plot.py
exercise1/: CMakeLists.txt  package.xml
exercise1/launch/: greeting.launch  reverse.launch
exercise1/msg/: Greeting.msg
exercise1/src/: client_node.cpp  hello_world_node.cpp  publish_string_node.cpp
exercise1/srv/: Reverse.srv
exercise2/: CMakeLists.txt  package.xml
exercise2/launch/: randomwalk.launch  rectangle.launch
exercise2/scripts/: movement.py
exercise2/src/: pubvel.cpp
exercise3_quar/: CMakeLists.txt  README.md  package.xml
exercise3_quar/launch/: amcl_simulation.launch  move_to_hardcoded_locations.launch  rins_world.launch
exercise3_quar/meshes/: rins_world_blender7.dae
exercise3_quar/scripts/: move.py  move_better.py
exercise3_quar/src/: map_goals.cpp
exercise3_quar/worlds/: rins.world
exercise4/: CMakeLists.txt  README.md  package.xml
exercise4/launch/: amcl_simulation.launch  face_finder.launch  move_to_hardcoded_locations.launch  rins_world.launch
exercise4/meshes/: rins_world_blender7.dae
exercise4/scripts/: breadcrumbs  face_finder  face_localizer  move_better.py
exercise4/scripts/detectors/: dlib_detector.py  haar_detector.py
exercise4/tests/: step_by_step_ring_detection.py
exercise6/: CMakeLists.txt  package.xml
exercise6/launch/: amcl_simulation.launch  dummy.launch  find_cylinder.launch  find_plane.launch  find_torus_and_cylinder.launch  forwarder.launch  kinect_without_turtlebot.launch  planes.launch  rins_world.launch  voxelgrid.launch
exercise6/maps/: task2_map.yaml
exercise6/meshes/: rins_task2.dae
exercise6/src/: centroid_estimation.cpp  cloud_viewer.cpp  cylinder_and_ring_detector.cpp  cylinder_segmentation.cpp  dominant_plane_with_obstacle_clustering.cpp  don_segmentation.cpp  example_voxelgrid.cpp  find_plane.cpp  forwarder.cpp  minicut_segmentation.cpp  planes.cpp  pose_estimation_cluster.cpp  region_growing.cpp  voxelgrid.cpp
exercise6/worlds/: rins_task2.world
face_classification/: CMakeLists.txt  README.md  package.xml
face_classification/launch/: face_classification.launch
face_classification/scripts/: face_classifier.py
face_classification/srv/: FaceClassification.srv
final_report/: final_report.tex
homework1/: README.md  REPORT.md  analyzer.py  package.xml  test_videos.sh
homework1/analysis/: distance_results.txt  results.txt
homework1/hw1/: CMakeLists.txt  package.xml  tutorial_hw1.md
homework1/launch/: face_detector.launch  (+1 more)
homework2/: README.md  classification.py  plot.py  prepare_testing_data.py  prepare_training_data.py  test.csv  train.csv
love_maker/: CMakeLists.txt  README.md  README_TASK1.txt  package.xml
love_maker/launch/: all.launch  all_but_movement_controller.launch  face_detector.launch  face_mapper.launch  face_robustifier.launch  movement_controller.launch  robustifier.launch
love_maker/launch/includes/: amcl_simulation.launch  rins_world.launch  roomba.launch.xml  rviz_config.rviz
love_maker/maps/: my_map.pgm  my_map1.pgm  my_map1.yaml
love_maker/meshes/: rins_world_task1.dae
love_maker/scripts/: face_detector.py  face_mapper.py  movement_controller.py  robustifier.py  utils.py
love_maker/scripts/detectors/: face.py
love_maker/worlds/: rins2.world  rins_task1.world
love_maker_2000/: CMakeLists.txt  README.md  package.xml
love_maker_2000/launch/: all.launch  all_but_movement_controller.launch  brain.launch  cylinder_approaching_point_calculator.launch  cylinder_detector.launch  cylinder_detector_sparse.launch  cylinder_robustifier.launch  face_detector.launch  find_torus_and_cylinder.launch  movement_controller.launch  ring_approaching_point_calculator.launch  ring_detector.launch  ring_mapper.launch  ring_robustifier.launch  robustifier.launch  torus_robustifier.launch
love_maker_2000/launch/includes/: amcl_simulation.launch  rins_world.launch  rviz_config.rviz
love_maker_2000/maps/: my_map.yaml  my_map1.pgm  task2_map.pgm
love_maker_2000/meshes/: rins_eval2.dae  rins_task2_new.dae
love_maker_2000/scripts/: brain.py  cylinder_approaching_point_calculator.py  cylinder_robustifier.py  face_detector.py  face_mapper.py  greeter.py  map_maker.py  movement_controller.py  ring_approaching_point_calculator.py  ring_detector.py  ring_mapper.py  torus_robustifier.py  utils.py
love_maker_2000/scripts/movement/: approaching_task.py  arm_task.py  controller.py  fine_approaching_task.py  localization_task.py  task.py  wandering_task.py
love_maker_2000/src/: cylinder_and_ring_detector.cpp  cylinder_detector.cpp  cylinder_segmentation.cpp  voxelgrid.cpp
love_maker_2000/srv/: ApproachingPointCalculator.srv
love_maker_2000/worlds/: rins_eval2.world  rins_task2.world  rins_task2_new.world
object_detection_msgs/: CMakeLists.txt  package.xml
object_detection_msgs/msg/: ObjectDetection.msg
pincher_arm/: README.md
speech_transcription/: CMakeLists.txt  README.md  package.xml
speech_transcription/launch/: speech_transcription.launch
speech_transcription/scripts/: speech_transcription_server.py  testing_speech_recognition.ipynb
speech_transcription/srv/: InquireAffirmation.srv  InquireColor.srv  InquirePreferences.srv
task3/: CMakeLists.txt  package.xml
task3/launch/: kobuki.launch.xml  rins_world.launch
task3/meshes/: rins_eval3_1.dae  task3-1.dae  task3-2.dae  task3-3.dae  task3-faces.dae
task3/robots/: kobuki_hexagons_kinect.urdf.xacro
task3/worlds/: rins_eval3_1.world  rins_task3-1.world  rins_task3-2.world  rins_task3-3.world  rins_task3-faces.world
test/: test.ipynb
(+227 files in other folders)
