<?xml version="1.0"?>
<package>
  <name>love_maker</name>
  <version>0.0.0</version>
  <description>The love_maker package</description>

  <maintainer email="matejd@todo.todo">matejd</maintainer>

  <license>BSD</license>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>object_detection_msgs</build_depend>
  <build_depend>color_classification</build_depend>
  <build_depend>face_classification</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>object_detection_msgs</run_depend>
  <run_depend>color_classification</run_depend>
  <run_depend>face_classification</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

<export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_plugin_path="${prefix}/lib" gazebo_model_path="${prefix}/.." />
</export>
</package>
