<?xml version="1.0"?>
<package>
  <name>object_detection_msgs</name>
  <version>1.0.0</version>
  <description>Object detection messages</description>

  <maintainer email="drobilc@gmail.com">drobilc</maintainer>

  <license>BSD</license>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
</package>
